# vpkmerge

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  LICENSE  Program.cs  README.md  vpkmerge.csproj
.github/: release-notes-download.md
docs/: anim-authoring-pipeline.md  anim-export-handoff.md  architecture-mermaid.md  customization-frontier.md  deadlock-music-pack-research.md  exporter-progress.md  findings-deadlock-skin-textures.md  grimoire-shader-preview-handoff.md  handoff-fullbody-albedo-next.md  handoff-model-edit.md  handoff-nm-loose-clip-pose.md  handoff-texture-edit-cli.md  handoff-vertex-color-recolor.md  handoff-vmat-blob-expr-replace.md  hero-locker-live-preview.md  music-pack-best-practices.md  next-prompt.md  npr-pipeline-decision.md  preview-fidelity-roadmap.md  qol-lock-teardown.md  rainbow-prism-qa-findings.md  remaining-roster-recolor-audit.md  soul-container-pure-status.md  soul-container-resourcecompiler.md  soul-container-rust-import-workflow.md  source2-preview-data-contract.md  spike-blobbed-vmat-recolor.md  spike-npr-toon-shading.md  spike-vpk-metadata-embed.md  spike-vsndevts-kv3.md  splicing.md  (+3 more)
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: lib.rs  main.rs
morphic/: Cargo.toml  LICENSE-THIRD-PARTY  README.md  build.rs
morphic/examples/: dump_inline_diff.rs  dump_tex.rs  list_paths.rs  mat_dump.rs  skin_pack.rs  tex_fmt.rs  tex_stats.rs  write_vmat.rs  write_vtex_png.rs
morphic/fixtures/: README.md
morphic/fixtures/ati1n/: gradient_dev_02_color_psd_b8463dec.meta.json  gradient_dev_02_color_psd_b8463dec.vtex_c  point_worldtext_fullbright_vmat_g_tselfillummask_2b2ebb3f.meta.json  point_worldtext_fullbright_vmat_g_tselfillummask_2b2ebb3f.vtex_c
morphic/fixtures/ati2n/: blue_illum_vmat_g_ttintmaskrimlightmask_c7ebc163.meta.json  blue_illum_vmat_g_ttintmaskrimlightmask_c7ebc163.vtex_c  gradient_dev_v_mid_02_psd_79f9eba7.meta.json  gradient_dev_v_mid_02_psd_79f9eba7.vtex_c
morphic/fixtures/bc6h/: sky_alpha_matte_vmat_g_tskytexture_298cc46b.meta.json  sky_alpha_matte_vmat_g_tskytexture_298cc46b.vtex_c  sky_l4d_c1_2_hdr_cube_pfm_b562e1cd.f32  sky_l4d_c1_2_hdr_cube_pfm_b562e1cd.meta.json  sky_l4d_c1_2_hdr_cube_pfm_b562e1cd.vtex_c
morphic/fixtures/bc7/: generic_sleep_icon.meta.json  generic_sleep_icon.vtex_c  gradient_dev_02_color_psd_73660177.meta.json  gradient_dev_02_color_psd_73660177.vtex_c
morphic/fixtures/dxt1/: default_color_tga_99901565.meta.json  default_color_tga_99901565.vtex_c  yellowflare.meta.json  yellowflare.vtex_c
morphic/fixtures/dxt5/: boss_health_psd_cc842722.meta.json  boss_health_psd_cc842722.vtex_c  radiant_regeneration_psd_ycocg.meta.json  radiant_regeneration_psd_ycocg.vtex_c
morphic/fixtures/kv3/: gigawatt.vsndevts_c  hornet_anim_meta.json  hornet_ctrl.kv3.json  hornet_ctrl.kv3bin  hornet_data.kv3.json  hornet_data.kv3bin  hornet_mdat0.kv3.json  hornet_mdat0.kv3bin  hornet_model_meta.json
morphic/fixtures/material/: necro_gravestone.vmat_c  necro_hands.vmat_c  necro_picker_hand_effect.vmat_c  picker_hand_glow.vmat_c  vindicta_headv2.material.json  vindicta_headv2.vmat_c
morphic/fixtures/meshopt/: body_lod3_i1.meshopt  body_lod3_i1.meshopt.json  body_lod3_v1.meshopt  body_lod3_v1.meshopt.json  ghost_glow_lod1_v0.meshopt  ghost_glow_lod1_v0.meshopt.json  gun_lod3_i0.meshopt  gun_lod3_i0.meshopt.json  gun_lod3_v0.meshopt  gun_lod3_v0.meshopt.json
morphic/fixtures/nm/: yamato_flinch_back.vnmclip_c  yamato_reload_idle_quick.vnmclip_c  yamato_rope_climb_idle.vnmclip_c  yamato_ui_hero_select.vnmclip_c
morphic/fixtures/png_rgba8888/: dynamic_images_sentinel.meta.json  dynamic_images_sentinel.vtex_c
morphic/fixtures/rgba8/: minimap_circle.meta.json  minimap_circle.vtex_c
morphic/fixtures/soul/: soul_material_donor.vmat_c
morphic/src/: edit.rs  error.rs  lib.rs  sound.rs  vfx_expr.rs
morphic/src/kv3/: binary.rs  mod.rs  patch.rs  reader.rs  rewrap.rs  tests.rs  types.rs  writer.rs
morphic/src/material/: mod.rs  tests.rs
morphic/src/meshopt/: index.rs  mod.rs  tests.rs  vertex.rs
morphic/src/model/: animation.rs  dxgi.rs  edit.rs  femodel.rs  glb.rs  gltf_import.rs  math.rs  mesh.rs  mod.rs  nm.rs  pose.rs  skeleton.rs  tests.rs  topology.rs  uvmask.rs  vbib.rs
morphic/src/resource/: header.rs  mod.rs
morphic/src/texture/: format.rs  mod.rs  vtex.rs
morphic/src/texture/decode/: bcn.rs  inline.rs  mod.rs  rgba8.rs
morphic/src/texture/encode/: bcn.rs  inline.rs  mod.rs  rgba8.rs
morphic/tests/: anim_local.rs  cubemap_faces.rs  edit_roundtrip.rs  fe_rest_oracle.rs  femodel_local.rs  gltf_anim_roundtrip.rs  golden.rs  kv3.rs  mip_chain_regen.rs  mip_levels.rs  model_local.rs  nm_clip.rs  nm_clip_local.rs  nm_local.rs  vmat_write.rs  vtex_write.rs
vpkmerge-cli/: Cargo.toml
vpkmerge-cli/src/: main.rs
vpkmerge-core/: Cargo.toml
vpkmerge-core/examples/: anim_clip_scan.rs  anim_experiments.rs  anim_experiments2.rs  anim_experiments3.rs  anim_experiments4.rs  anim_experiments5.rs  anim_fx.rs  anim_glb_diff.rs  anim_graph_dump.rs  atlas_sample.rs  bake_silver_ult.rs  blend_audit_survey.rs  blobtail.rs  blockver.rs  build_audio_mixer_lab.rs  build_music_pack.rs  build_title_fight_pack.rs  catalog_cache.rs  chrono_fx_pack.rs  chrono_probe.rs  chrono_tex_scan.rs  chrono_vmat_probe.rs  chunkmap.rs  clip_info.rs  countprefix.rs  crank_bomb_density.rs  dc_groups_probe.rs  decode_check.rs  decodetex.rs  dump_all_entries.rs  dump_test_clips.rs  dump_vmat.rs  encoder_test.rs  encoder_test_add.rs  extract_entry.rs  fbx_graph_diff.rs  femodel_dump.rs  find_donor.rs  flap_reskin_probe.rs  flap_weights.rs  (+107 more)
vpkmerge-core/src/: catalog.rs  catalog_cache.rs  cubemap.rs  hat_import.rs  hero_recolor.rs  icon.rs  lib.rs  localization.rs  model.rs  mp3.rs  panorama.rs  portrait.rs  recolor.rs  soul_container.rs  soul_import_clone.rs  soundevents.rs  soundswap.rs  texture_catalog.rs  trippy.rs  vmat_style.rs
vpkmerge-core/src/panorama/: layout.rs
vpkmerge-core/tests/: soundswap_event_live.rs
(+64 files in other folders)
