[package]
name = "morphic"
version = "0.2.0"
edition = "2021"
description = "Pure-Rust Source 2 .vtex_c texture decoder. Algorithms adapted from ValveResourceFormat (MIT)."
license = "MIT"
repository = "https://github.com/Slush97/vpkmerge"

[lints]
workspace = true

[dependencies]
bitflags = "2"
byteorder = "1"
thiserror = "1"
# Pure-Rust LZ4 block codec. Source 2 ships binary KV3 (.vsndevts_c et al.)
# with LZ4-compressed buffers; we only need the single-shot block decoder.
lz4_flex = { version = "0.11", default-features = false, features = ["std"] }
half = { version = "2", features = ["bytemuck"] }
bytemuck = "1"
# Safe, pure-Rust port of bcdec.h. Covers BC1..BC5, BC6H, BC7.
bcdec_rs = "0.2"
# Intel ISPC texture compressor: BC1/3/4/5/6H/7 encoders. Default build uses
# prebuilt ISPC object files (no toolchain needed). The `ispc` feature would
# rebuild from .ispc sources at build time; we leave it off.
intel_tex_2 = "0.5"
# Inline PNG / JPEG / WebP pass-through: VTexFormat::PNG_* / JPEG_* / WEBP_*
# textures store the payload as a literal compressed image inside the DATA
# block's pixel region. `image` parses just what it needs.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# Pure-Rust glTF 2.0 document builder for the model exporter's .glb writer. The
# JSON document is built with this; the binary GLB container is framed by hand.
# `names` keeps node names (the bone names Grimoire retargets clips against).
gltf-json = { version = "1", features = ["names"] }
ruzstd = "0.8.3"

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
walkdir = "2"
valve_pak = "0.1"
# glTF reader, for round-tripping the .glb the writer produces in tests.
gltf = { version = "1", features = ["names"] }
