[package]
name = "vpkmerge-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Command-line tool to combine Valve Pak (VPK) files."

[[bin]]
name = "vpkmerge"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
vpkmerge-core = { path = "../vpkmerge-core" }
