[package]
name = "vpkmerge-cli"
version = "0.8.0"
edition = "2021"
license = "MIT"
description = "Command-line tool to combine and split Valve Pak (VPK) files."
repository = "https://github.com/Slush97/vpkmerge"
keywords = ["vpk", "valve", "source2", "deadlock", "modding"]
categories = ["command-line-utilities", "game-development"]

[[bin]]
name = "vpkmerge"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vpkmerge-core = { path = "../vpkmerge-core", version = "0.8" }

[lints]
workspace = true
