[package]
name = "vpkmerge-core"
version = "0.3.0"
edition = "2021"
description = "Core VPK merging and splitting logic shared by the vpkmerge CLI and GUI."
license = "MIT"
repository = "https://github.com/Slush97/vpkmerge"
keywords = ["vpk", "valve", "source2", "deadlock", "modding"]
categories = ["game-development", "filesystem"]

[dependencies]
anyhow = "1"
valve_pak = "0.1"
tempfile = "3"
# Source 2 .vtex_c decoder (same workspace). Used to turn extracted portrait
# textures into PNGs; covers the uncompressed, embedded-PNG, and BCn formats.
morphic = { path = "../morphic", version = "0.0.1" }

[lints]
workspace = true
