[package]
name = "vpkmerge-core"
version = "0.10.0"
edition = "2021"
description = "Core VPK merging and splitting logic shared by the vpkmerge CLI and GUI."
license = "MIT"
repository = "https://github.com/Slush97/vpkmerge"
keywords = ["vpk", "valve", "source2", "deadlock", "modding"]
categories = ["game-development", "filesystem"]

[dependencies]
anyhow = "1"
valve_pak = "0.1"
tempfile = "3"
# JSON projection of decoded soundevents trees. `preserve_order` keeps KV3 key
# order (e.g. `base` first) so the dump mirrors the file and Grimoire can
# enumerate events in their original order.
serde_json = { version = "1", features = ["preserve_order"] }
# Source 2 .vtex_c decoder (same workspace). Used to turn extracted portrait
# textures into PNGs; covers the uncompressed, embedded-PNG, and BCn formats.
morphic = { path = "../morphic", version = "0.4.0" }

[lints]
workspace = true
