[package]
name = "vpkmerge-core"
version = "0.17.1"
edition = "2021"
description = "Core VPK merging and splitting logic shared by the vpkmerge CLI and GUI."
license = "MIT"
repository = "https://github.com/Slush97/vpkmerge"
keywords = ["vpk", "valve", "source2", "deadlock", "modding"]
categories = ["game-development", "filesystem"]

[dependencies]
anyhow = "1"
valve_pak = "0.1"
tempfile = "3"
# JSON projection of decoded soundevents trees. `preserve_order` keeps KV3 key
# order (e.g. `base` first) so the dump mirrors the file and Grimoire can
# enumerate events in their original order.
serde_json = { version = "1", features = ["preserve_order"] }
# Derive (de)serialization for the on-disk catalog cache (catalog_cache.rs).
serde = { version = "1", features = ["derive"] }
# Source 2 .vtex_c decoder (same workspace). Used to turn extracted portrait
# textures into PNGs; covers the uncompressed, embedded-PNG, and BCn formats.
morphic = { path = "../morphic", version = "0.9.1" }
# Decode + resize user PNGs for the custom icon/hero-card import (icon.rs).
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# Rust soul-container import prep reads user GLB files directly, replacing the
# Blender-only normalization/material extraction stage for compiler source trees.
gltf = { version = "1", features = ["names"] }

[dev-dependencies]
# Examples only: load externally-composited PNG overlays (e.g. pngover.rs) and
# extract/resize a GLB's embedded albedo image (soul_import_additive.rs).
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# Examples only: inspect/diff binary FBX graphs against Blender exports while
# bringing the Rust resourcecompiler prep path up to importer parity.
fbxcel = { version = "0.9", features = ["tree", "writer"] }
fbxcel-dom = "0.0.10"

[lints]
workspace = true
