[package]
name = "vpkmerge-gui"
version = "0.1.0"
description = "Visual VPK merger for Deadlock mods"
edition = "2021"

[lib]
name = "vpkmerge_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vpkmerge-core = { path = "../../vpkmerge-core" }

[lints]
workspace = true
