[package]
name = "vpkmerge-gui"
version = "0.2.0"
description = "Visual VPK merger for Deadlock mods"
edition = "2021"
license = "MIT"
repository = "https://github.com/Slush97/vpkmerge"

[lib]
name = "vpkmerge_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vpkmerge-core = { path = "../../vpkmerge-core" }
# Texture preview path: extract entry from VPK, decode via morphic, encode PNG,
# return as base64 data URL for the webview.
morphic = { path = "../../morphic" }
valve_pak = "0.1"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
# Used to tone-map HDR (BC6H) decoder output to LDR u8 for preview.
half = "2"

[lints]
workspace = true
